--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
   <body>
     <div id="app"></div>
     <script type="module" src="./src/index.tsx"></script>
+    <!-- Project Details Slider -->
+    <div class="project-slider">
+      <div class="project-slider__inner">
+        <button class="project-slider__close">&times;</button>
+        <div class="project-slider__content">
+          <!-- Project details will be loaded here -->
+        </div>
+      </div>
+    </div>
+    <!-- End Project Details Slider -->
   </body>
 </html>
